K8S/pod-go.yaml
apiVersion: v1
kind: Pod
metadata:
  name:  "goserver"
  labels:
    app: "goserver"
spec:
  containers:
    - name: goserver
      image: "edivanrl/my-go:latest"
