K8S/service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name:  "svc-goserver-lb"
spec:
  selector:
    app: goserver
  type: LoadBalancer
  ports:
  - name: goserver-80
    port: 80
    targetPort: 80
    protocol: TCP
