K8S/service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  "svc-goserver"
spec:
  selector:
    app: goserver
  type: ClusterIP
  ports:
  - name: goserver-80
    port: 80
    targetPort: 80
    protocol: TCP
