K8S/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-host
  annotations:
    kubertentes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - host: "colmenacloud.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          serviceName: svc-goserver
          ServicePort: 80
  tls:
  - hosts:
   - "colmenacloud.com"
   secretName: nome-certificado-tls
